--- a/MyMedicinePal/package.json
+++ b/MyMedicinePal/package.json
@@ -1,21 +1,47 @@
 {
-  "name": "mymedicinepal",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "react-native-simple-alarm-example",
+  "version": "0.0.3",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6"
+    "@react-native-community/async-storage": "1.12.1",
+    "@react-native-community/datetimepicker": "5.1.0",
+    "@react-native-community/eslint-config": "^1.0.0",
+    "@react-native-community/push-notification-ios": "1.10.1",
+    "expo": "^49.0.18",
+    "lodash": "4.17.21",
+    "moment": "2.29.1",
+    "react": "16.11.0",
+    "react-native": "0.63.4",
+    "react-native-gesture-handler": "1.6.1",
+    "react-native-modal-datetime-picker": "13.0.1",
+    "react-native-modal-selector": "2.0.0",
+    "react-native-picker-select": "7.0.0",
+    "react-native-push-notification": "3.1.9",
+    "react-native-reanimated": "1.8.0",
+    "react-native-router-flux": "4.2.0",
+    "react-native-screens": "2.4.0",
+    "react-native-simple-alarm": "link:../",
+    "react-native-simple-radio-button": "2.7.4",
+    "react-native-swipe-list-view": "2.5.0",
+    "react-native-vector-icons": "6.0.1",
+    "react-test-renderer": "16.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "7.9.0",
+    "@babel/runtime": "7.9.2",
+    "babel-jest": "25.3.0",
+    "eslint": "6.8.0",
+    "jest": "25.3.0",
+    "metro-react-native-babel-preset": "0.59.0"
   },
-  "private": true
+  "jest": {
+    "preset": "react-native"
+  }
 }
